syntax = "proto3";
package regen.bond.v1alpha1;

import "gogoproto/gogo.proto";
import "regen/bond/v1alpha1/params.proto";
import "regen/bond/v1alpha1/types.proto";


option go_package = "github.com/regen-network/regen-ledger/x/bond";

// GenesisState defines the bond module's genesis state.
message GenesisState {
  Params params = 1 [(gogoproto.nullable) = false];

  repeated BondInfo bond_info = 2;
}
